<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlesim_dibujito</name>
  <version>1</version>
  <description>dibujito.</description>
  <license>Apache License 2.0</license>
  <author email="carlos.sierra@students.salle.url.edu">Carlos Sierra</author>
  <author email="sandra.corral@students.salle.url.edu">Sandra Corral</author>
  <author email="paula.morales@students.salle.url.edu">Paula Morales</author>

  <depend>rclpy</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>
  <depend>math</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
